syntax = "proto3";

import "Proto_Common.proto";
package YouYou.Proto;

//服务器返回创建角色消息[c#]
message WS2C_ReturnCreateRole
{
    bool Result = 1;//结果
    int64 RoleId = 2;//角色编号
}

//服务器返回已有角色消息[c#]
message WS2C_ReturnRoleList
{
	message WS2C_ReturnRoleList_Item
	{
		int64 RoleId = 1;//角色编号
		int32 JobId = 2;//职业编号
		int32 Sex = 3;//性别
		string NickName = 4;//昵称
		int32 Level = 5;//等级
	}
	repeated WS2C_ReturnRoleList_Item RoleList = 1;//角色列表
}

//服务器返回角色信息[c#]
message WS2C_ReturnRoleInfo
{
	int64 RoleId = 1;//角色编号
	int32 JobId = 2;//职业
	int32 Sex = 3;//性别
	string NickName = 4;//昵称
	int32 Level = 5;//等级
	int32 CurrSceneId = 6;//所在场景编号
	Vector3 CurrPos = 7;//坐标
	float RotationY = 8;//旋转
}

//服务器返回进入游戏完毕消息[c#]
message WS2C_ReturnEnterGameComplete
{

}